--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'tech.gusavila92:java-android-websocket-client:1.2.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    implementation "androidx.core:core:1.6.0"
+
 }
